--- a/src/component/card/style/_scheme.scss
+++ b/src/component/card/style/_scheme.scss
@@ -5,20 +5,22 @@
 
 @mixin _card-scheme($legacy: false) {
   #{ns(card)} {
-    &:not(&--no-background):not(&--shadow) {
-      @include scheme-element-bg-color(default grey, (legacy:$legacy));
-    }
+    @include scheme-element-bg-color(default grey, (legacy:$legacy));
 
     &:not(&--no-border):not(&--shadow) {
       @include scheme-element-box-shadow-color(default grey, (legacy:$legacy), all-1-out);
     }
 
-    &--grey:not(&--no-background) {
+    &--grey {
       @include scheme-element-bg-color(contrast grey, (legacy:$legacy));
     }
 
     &--shadow {
       @include scheme-element-bg-color(elevated grey, (legacy:$legacy));
+    }
+
+    &--no-background {
+      @include scheme-element-bg-transparent((legacy:$legacy, hover: true));
     }
 
     @include before {
